--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Document</title>
 </head>
 
-<body class="flex box-row">
+<body class="flex box-row relative">
 
     <header>
 
@@ -48,28 +48,28 @@
 
                 <div>
                     <h1>Recently Played</h1>
-                    <div class="row flex box-row">
+                    <div class="row flex box-row-no box-space-bew">
 
-                        <div class="card flex box-row">
+                        <div class="card">
                             
                             <div class="image">
                                 <img src="img/metal_lifting.jpg" alt="">
                             </div>
 
-                            <div class="description" style="text-align: center;">
+                            <div class="description" >
                                 <span>Heavy Metal</span>
                                 <span>subtitle</span>
                             </div>
 
                         </div>
 
-                        <div class="card flex box-row">
+                        <div class="card">
                             
                             <div class="image">
                                 <img src="img/stranger.jpeg" alt="">
                             </div>
 
-                            <div class="description" style="text-align: center;">
+                            <div class="description">
                                 <span>Stranger Things, Vol. 1 (a Netflix Original Series)</span>
                                 <span>subtitle</span>
                             </div>
