--- a/index.html
+++ b/index.html
@@ -16,7 +16,44 @@
 <body class="flex box-row relative">
 
     <header>
+        <div class="container-nav">
 
+            <div class="logo">
+                <img src="img/logo.svg" alt="">
+            </div>
+
+            <div class="navigation">
+                <ul class="flex box-column">
+                    <li>
+                        <button class="flex box-row">
+                            <img src="img/home.svg" alt="">
+                            <span href="">Home</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="flex box-row">
+                            <img src="img/search.svg" alt="">
+                            <span href="">Cerca</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="flex box-row">
+                            <img src="img/libreria.svg" alt="">
+                            <span href="">La tua libreria</span>
+                        </button>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="playlist">
+
+            </div>
+
+            <div class="nav-footer">
+
+            </div>
+
+        </div>
     </header>
 
 
