--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
 <body class="flex box-row relative">
 
     <header>
-        <div class="container-nav">
+        <div class="container-nav flex box-column-no relative">
 
             <div class="logo">
                 <img src="img/logo.svg" alt="">
             </div>
 
             <div class="navigation">
-                <ul class="flex box-column">
+                <ul class="flex box-column-no">
                     <li>
-                        <button class="flex box-row">
+                        <button class="flex box-row-no">
                             <img src="img/home.svg" alt="">
                             <span href="">Home</span>
                         </button>
                     </li>
                     <li>
-                        <button class="flex box-row">
+                        <button class="flex box-row-no">
                             <img src="img/search.svg" alt="">
                             <span href="">Cerca</span>
                         </button>
                     </li>
                     <li>
-                        <button class="flex box-row">
+                        <button class="flex box-row-no">
                             <img src="img/libreria.svg" alt="">
                             <span href="">La tua libreria</span>
                         </button>
@@ -46,11 +46,62 @@
             </div>
 
             <div class="playlist">
-
+                <h2>PLAYLIST</h2>
+                <ul class="flex box-column-no">
+                    <li>
+                        <button class="flex box-row-no">
+                            <i class="fa-regular fa-square-plus"></i>
+                            <span href="">Crea playlist</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="flex box-row-no">
+                            <span href="">Nome playlist</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="flex box-row-no">
+                            <span href="">Nome playlist</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="flex box-row-no">
+                            <span href="">Nome playlist</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="flex box-row-no">
+                            <span href="">Nome playlist</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="flex box-row-no">
+                            <span href="">Nome playlist</span>
+                        </button>
+                    </li>
+                    <li>
+                        <button class="flex box-row-no">
+                            <span href="">Nome playlist</span>
+                        </button>
+                    </li>
+                </ul>
             </div>
 
             <div class="nav-footer">
-
+                <ul class="flex box-column-no">
+                    <li>
+                        <button class="flex box-row-no">
+                            <img src="img/download.svg" alt="">
+                            <span>Installa app</span>
+                        </button>
+                    </li>
+                    <li class="flex box-row-no">
+                        <button>
+                            <img src="img/profile.svg" alt="">
+                        </button>
+                        <h2>John Doe</h2>
+                    </li>
+                </ul>
             </div>
 
         </div>
