--- a/index.html
+++ b/index.html
@@ -47,44 +47,44 @@
 
             <div class="playlist">
                 <h2>PLAYLIST</h2>
-                <ul class="flex box-column-no">
-                    <li>
-                        <button class="flex box-row-no">
-                            <i class="fa-regular fa-square-plus"></i>
-                            <span href="">Crea playlist</span>
-                        </button>
-                    </li>
-                    <li>
-                        <button class="flex box-row-no">
-                            <span href="">Nome playlist</span>
-                        </button>
-                    </li>
-                    <li>
-                        <button class="flex box-row-no">
-                            <span href="">Nome playlist</span>
-                        </button>
-                    </li>
-                    <li>
-                        <button class="flex box-row-no">
-                            <span href="">Nome playlist</span>
-                        </button>
-                    </li>
-                    <li>
-                        <button class="flex box-row-no">
-                            <span href="">Nome playlist</span>
-                        </button>
-                    </li>
-                    <li>
-                        <button class="flex box-row-no">
-                            <span href="">Nome playlist</span>
-                        </button>
-                    </li>
-                    <li>
-                        <button class="flex box-row-no">
-                            <span href="">Nome playlist</span>
-                        </button>
-                    </li>
-                </ul>
+                <button class="flex box-row-no">
+                    <i class="fa-regular fa-square-plus"></i>
+                    <span href="">Crea playlist</span>
+                </button>
+                <div class="ciao">
+                    <ul class="flex box-column-no">
+                        <li>
+                            <button class="flex box-row-no">
+                                <span href="">Nome playlist</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="flex box-row-no">
+                                <span href="">Nome playlist</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="flex box-row-no">
+                                <span href="">Nome playlist</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="flex box-row-no">
+                                <span href="">Nome playlist</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="flex box-row-no">
+                                <span href="">Nome playlist</span>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="flex box-row-no">
+                                <span href="">Nome playlist</span>
+                            </button>
+                        </li>
+                    </ul>
+                </div>
             </div>
 
             <div class="nav-footer">
