--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <i class="fa-regular fa-square-plus"></i>
                     <span href="">Crea playlist</span>
                 </button>
-                <div class="ciao">
+                <div class="playlist-name">
                     <ul class="flex box-column-no">
                         <li>
                             <button class="flex box-row-no">
