--- a/index.html
+++ b/index.html
@@ -326,16 +326,25 @@
 
         <div class="duration flex box-column box-center">
 
-            <div class="control-button">
-                <a href=""><i class="fa-solid fa-arrows-rotate"></i></a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
+            <div class="control-button flex box-row box-center">
+                
+                <a href=""><i class="fa-solid fa-shuffle"></i></a>
+                <a href=""><i class="fa-solid fa-backward-step"></i></a>
+                <a href=""><i class="fa-regular fa-circle-play"></i></a>
+                <a href=""><i class="fa-solid fa-forward-step"></i></a>
+                <a href=""><i class="fa-solid fa-arrow-rotate-right"></i></a>
+
             </div>
 
-            <div class="time-bar">
-
+            <div class="time-bar flex box-row box-center">
+                <span>0:41</span>
+                <div class="bar clearfix">
+                    <div class="fl relative">
+                        <div class="thumb"></div>
+                    </div>
+                    <div class="fr"></div>
+                </div>
+                <span>1:50</span>
             </div>
             
         </div>
@@ -345,7 +354,7 @@
         <div class="volume flex box-row-no">
 
             <div class="share-button">
-
+                qualcosa
             </div>
 
             <div class="volume-bar">
