--- a/index.html
+++ b/index.html
@@ -304,18 +304,18 @@
 
     <footer class="flex box-row-no box-space-bew">
 
-        <div class="music flex box-column">
+        <div class="music box-row">
 
             <div class="music-image">
                 <img src="img/sinister.jpeg" alt="">
             </div>
 
-            <div class="music-name flex box-column">
+            <div class="music-name flex box-column box-center">
                 <h2>Sinister</h2>
                 <span>Brano nome</span>
             </div>
 
-            <div class="save-music flex box-column">
+            <div class="save-music flex box-row">
                 <a href=""><i class="fa-regular fa-heart"></i></a>
                 <a href=""><i class="fa-regular fa-folder"></i></a>
             </div>
@@ -351,14 +351,19 @@
 
 
 
-        <div class="volume flex box-row-no">
+        <div class="volume">
 
-            <div class="share-button">
-                qualcosa
-            </div>
+            <i class="fa-solid fa-list"></i>
+            <i class="fa-solid fa-desktop"></i>
+            <i class="fa-solid fa-volume-high"></i>
 
             <div class="volume-bar">
-                
+                <div class="bar clearfix">
+                    <div class="fl relative">
+                        <div class="thumb"></div>
+                    </div>
+                    <div class="fr"></div>
+                </div>
             </div>
 
         </div>
