responsive header part 1

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                 <ul class="flex box-column-no">
                     <li>
                         <button class="flex box-row-no">
+                            <img src="img/logo-small.svg" alt="">
+                        </button>
+                    </li>
+                    <li>
+                        <button class="flex box-row-no">
                             <img src="img/home.svg" alt="">
                             <span href="">Home</span>
                         </button>
