responsive header part 3

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
             <div class="nav-footer">
                 <ul class="flex box-column-no">
-                    <li>
+                    <li class="flex box-row">
                         <button class="flex box-row-no">
                             <img src="img/download.svg" alt="">
                             <span>Installa app</span>
@@ -310,7 +310,7 @@
 
     <footer class="flex box-row-no box-space-bew">
 
-        <div class="music box-row">
+        <div class="music box-row-no">
 
             <div class="music-image">
                 <img src="img/sinister.jpeg" alt="">
@@ -332,7 +332,7 @@
 
         <div class="duration flex box-column box-center">
 
-            <div class="control-button flex box-row box-center">
+            <div class="control-button flex box-row-no box-center">
                 
                 <a href=""><i class="fa-solid fa-shuffle"></i></a>
                 <a href=""><i class="fa-solid fa-backward-step"></i></a>
@@ -342,7 +342,7 @@
 
             </div>
 
-            <div class="time-bar flex box-row box-center">
+            <div class="time-bar flex box-row-no box-center">
                 <span>0:41</span>
                 <div class="bar clearfix">
                     <div class="fl relative">
