--- a/index.html
+++ b/index.html
@@ -127,12 +127,12 @@
 
             <div class="nav">
                 <ul class="flex box-row box-center">
-                    <li><a>IN EVIDENZA</a></li>
-                    <li><a href="">PODCAST</a></li>
-                    <li><a href="">CLASSIFICHE</a></li>
-                    <li><a href="">GENERI E MOOD</a></li>
-                    <li><a href="">NUOVE USCITE</a></li>
-                    <li><a href="">SCOPRI</a></li>
+                    <li><a href="#">IN EVIDENZA</a></li>
+                    <li><a href="#">PODCAST</a></li>
+                    <li><a href="#">CLASSIFICHE</a></li>
+                    <li><a href="#">GENERI E MOOD</a></li>
+                    <li><a href="#">NUOVE USCITE</a></li>
+                    <li><a href="#">SCOPRI</a></li>
                 </ul>
             </div>
 
